--- a/res/layout/choose_photo_layout.xml
+++ b/res/layout/choose_photo_layout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/white" >
 
     <RelativeLayout
         android:id="@+id/photo_choose_head"
@@ -59,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/photo_choose_head"
-        android:background="@color/white"
+        android:layout_marginTop="4dp"
         android:cacheColorHint="@android:color/transparent"
         android:clipChildren="true"
         android:columnWidth="100dp"
@@ -76,28 +77,43 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/ligthgreen"
+        android:background="#aa1abc9c"
         android:clickable="true" >
 
-        <TextView
-            android:id="@+id/choosed_album_name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textColor="@color/white" />
+            android:background="@drawable/default_bkg_selector" >
 
-        <TextView
-            android:id="@+id/album_photo_count"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:textColor="@color/white" />
+            <ImageView
+                android:id="@+id/multi_choosed_album_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:paddingLeft="10dp"
+                android:src="@drawable/icon_multi_album" />
+
+            <TextView
+                android:id="@+id/choosed_album_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/multi_choosed_album_icon"
+                android:gravity="center_vertical"
+                android:paddingLeft="4dp"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/album_photo_count"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:textColor="@color/white" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
