--- a/res/layout/choose_photo_item_layout.xml
+++ b/res/layout/choose_photo_item_layout.xml
@@ -19,8 +19,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="6dp"
             android:layout_alignParentTop="true"
-            android:src="@drawable/ic_delete_pics" />
+            android:layout_marginTop="6dp"
+            android:src="@drawable/icon_photo_unselected" />
     </RelativeLayout>
 
 </com.pkjiao.friends.mm.photochoose.SquareLayout>
