--- a/res/layout/photo_view_layout.xml
+++ b/res/layout/photo_view_layout.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <android.support.v4.view.ViewPager
+    <!--
+         <android.support.v4.view.ViewPager
         android:id="@+id/photo_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,6 +12,13 @@
         android:flipInterval="30"
         android:background="@color/black"
         android:persistentDrawingCache="animation" />
+    -->
+
+    <com.pkjiao.friends.mm.view.HackyViewPager
+        android:id="@+id/photo_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black" />
 
     <com.pkjiao.friends.mm.viewpagerindicator.LinePageIndicator
         android:id="@+id/photo_view_indicator"
