--- a/res/layout/fill_userinfo_layout.xml
+++ b/res/layout/fill_userinfo_layout.xml
@@ -250,7 +250,7 @@
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/userinfo_department"
+        android:id="@+id/userinfo_profession"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/userinfo_hobby_group"
