--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -56,4 +56,9 @@
         <item name="android:windowExitAnimation">@anim/slide_out</item>
     </style>
 
+    <style name="AnimationSharePopup">
+        <item name="android:windowEnterAnimation">@anim/slide_down_in</item>
+        <item name="android:windowExitAnimation">@anim/slide_down_out</item>
+    </style>
+
 </resources>
