--- a/res/layout/contacts_list_fragment_layout.xml
+++ b/res/layout/contacts_list_fragment_layout.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="没有有效的女朋友"
+        android:text="邀请好友，发现新朋友"
         android:textSize="18sp" />
 
 </RelativeLayout>
