--- a/res/layout/edit_info_comments_layout.xml
+++ b/res/layout/edit_info_comments_layout.xml
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@color/transparent"
-            android:hint="说点什么，让世界听到你的心跳..."
+            android:hint="发布动态..."
             android:minHeight="20dp"
             android:padding="10dp"
             android:textColor="@color/gray" />
