--- a/res/layout/reply_list_layout.xml
+++ b/res/layout/reply_list_layout.xml
@@ -89,7 +89,7 @@
             android:layout_marginTop="6dp"
             android:layout_toLeftOf="@id/reply_list_reply_send"
             android:background="@drawable/register_login_edit_selector"
-            android:hint="让世界聆听你的心跳..."
+            android:hint="发布评论..."
             android:textColor="@color/gray"
             android:textSize="15sp" />
     </RelativeLayout>
