--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -33,8 +33,8 @@
                 android:gravity="center_vertical"
                 android:paddingRight="12dp"
                 android:text="设置"
-                android:textSize="16dp"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="16dp" />
         </RelativeLayout>
     </RelativeLayout>
 
@@ -42,8 +42,8 @@
         android:id="@+id/barcode_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/settings_toolbar" >
+        android:layout_below="@id/settings_toolbar"
+        android:layout_marginTop="20dp" >
 
         <ImageView
             android:id="@+id/barcode"
@@ -156,10 +156,32 @@
         android:background="@color/darkgray" />
 
     <TextView
-        android:id="@+id/change_password"
+        android:id="@+id/user_feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/func_desc"
+        android:alpha="0.8"
+        android:background="@drawable/gray_bkg_selector"
+        android:clickable="true"
+        android:paddingBottom="10dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="10dp"
+        android:text="用户反馈"
+        android:textSize="16dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_below="@id/user_feedback"
+        android:alpha="0.6"
+        android:background="@color/darkgray" />
+
+    <TextView
+        android:id="@+id/change_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/user_feedback"
         android:alpha="0.8"
         android:background="@drawable/gray_bkg_selector"
         android:clickable="true"
