--- a/res/layout/contacts_info_header_layout.xml
+++ b/res/layout/contacts_info_header_layout.xml
@@ -21,16 +21,34 @@
         android:clickable="true"
         android:orientation="vertical" >
 
-        <com.pkjiao.friends.mm.roundedimageview.RoundedImageView
-            android:id="@+id/contacts_info_person_pic"
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:layout_marginLeft="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person_default_big_pic"
-            app:border_width="0dp"
-            app:corner_radius="125dp"
-            app:oval="false" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <com.pkjiao.friends.mm.roundedimageview.RoundedImageView
+                android:id="@+id/contacts_info_person_pic"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
+                android:layout_marginLeft="10dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/person_default_big_pic"
+                app:border_width="0dp"
+                app:corner_radius="125dp"
+                app:oval="false" />
+
+            <TextView
+                android:id="@+id/contacts_info_edit_info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp"
+                android:paddingTop="20dp"
+                android:alpha="0.8"
+                android:text="编辑资料"
+                android:textColor="@color/darkgreen"
+                android:textSize="16dp" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/contacts_info_friend_name"
@@ -39,8 +57,8 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"
             android:text="楠楠"
-            android:textSize="18sp"
-            android:textColor="@color/darkgreen" />
+            android:textColor="@color/darkgreen"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/contacts_info_friends_description"
@@ -52,14 +70,14 @@
             android:layout_marginTop="10dp"
             android:alpha="0.6"
             android:text="来自 楠楠 等3位好友的通信录"
-            android:textSize="14sp"
-            android:textColor="@color/darkgreen" />
+            android:textColor="@color/darkgreen"
+            android:textSize="14sp" />
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="8dp"
             android:alpha="0.5"
-            android:background="@color/darkgray" >
+            android:background="@color/lightgray" >
         </ImageView>
     </LinearLayout>
 
@@ -68,7 +86,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/contacts_info_head_detail"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:visibility="gone" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -166,7 +185,8 @@
         android:layout_height="1dp"
         android:layout_below="@id/contacts_info_head_02"
         android:alpha="0.5"
-        android:background="@color/darkgray" >
+        android:background="@color/darkgray"
+        android:visibility="gone" >
     </ImageView>
 
 </RelativeLayout>
