--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -43,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/settings_toolbar"
-        android:layout_marginTop="20dp" >
+        android:layout_marginTop="20dp"
+        android:visibility="gone" >
 
         <ImageView
             android:id="@+id/barcode"
@@ -77,7 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/barcode_group"
         android:background="@drawable/gray_bkg_selector"
-        android:clickable="true" >
+        android:clickable="true"
+        android:visibility="gone" >
 
         <TextView
             android:layout_width="wrap_content"
@@ -106,7 +108,15 @@
 
     <ImageView
         android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_below="@id/version_update"
+        android:background="#66dddddd" />
+
+    <ImageView
+        android:id="@+id/divider_00"
+        android:layout_width="match_parent"
         android:layout_height="0.5dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/version_update"
         android:alpha="0.6"
         android:background="@color/darkgray" />
@@ -115,7 +125,7 @@
         android:id="@+id/about_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/version_update"
+        android:layout_below="@id/divider_00"
         android:alpha="0.8"
         android:background="@drawable/gray_bkg_selector"
         android:clickable="true"
@@ -198,6 +208,12 @@
         android:layout_below="@id/change_password"
         android:alpha="0.6"
         android:background="@color/darkgray" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="21dp"
+        android:layout_below="@id/change_password"
+        android:background="#66dddddd" />
 
     <ImageView
         android:id="@+id/divider"
