--- a/res/layout/dynamic_info_fragment_layout.xml
+++ b/res/layout/dynamic_info_fragment_layout.xml
@@ -21,6 +21,8 @@
             android:id="@+id/dynamic_info_listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:divider="#dddddd"
+            android:dividerHeight="12dp"
             android:listSelector="#00000000" >
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
